# agents.ai_python

./: .env.example  README.md  agent_loader.py  generate_schema.py  main.py  pyproject.toml  reddit_scout.py  sample_output.json  sample_output.md  test_agent.py
agent_package/: agent.yaml  input_schema.json  output_schema.json
material/: IMPLEMENTATION_SUMMARY.md
