[project]
name = "agents-ai-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.4",
    "langchain>=1.2.9",
    "langgraph>=1.0.8",
    "praw>=7.7.1",
    "pymongo>=4.16.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.40.0",
]
